--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,5 @@
 <div class="container">
-  <a href="/notes">click here!</a>
+  <a href='/notes'>click here for all notes!</a><br>
+  <a href='/notes/new'>click here to create a new note!</a><br>
+
 </div>
