--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <a href='/notes'>click here for all notes!</a><br>
   <a href='/notes/new'>click here to create a new note!</a><br>
+  <a href="/note"></a>
 
 </div>
