--- a/app/views/update_note.erb
+++ b/app/views/update_note.erb
@@ -3,6 +3,6 @@
     Title: <input type='text' name='title'><br>
     <textarea rows='10' cols='30' name='content'>Type the note here!</textarea><br>
     <input type='submit' value='Submit!'>
+    <input type="hidden" name="_method" value="put" />
   </form>
 </div>
-
