--- a/app/views/update_note.erb
+++ b/app/views/update_note.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <form action="/notes" method='post'>
-    Title: <input type='text' name='title'><br>
-    <textarea rows='10' cols='30' name='content'>Type the note here!</textarea><br>
-    <input type='submit' value='Submit!'>
-    <input type="hidden" name="_method" value="put" />
+  <form action="/notes/ <%= @note.id %>" method='post'>
+    Title: <input type='text' name='title'><br />
+    <textarea rows='10' cols='30' name='note[content]'>Type the note here!</textarea><br />
+    <input type='submit' name='note[title]' value='Submit!'/>
+    <input type="hidden" name="_method" value="put"/>
   </form>
 </div>
