--- a/app/views/update_note.erb
+++ b/app/views/update_note.erb
@@ -4,5 +4,6 @@
     <textarea rows='10' cols='30' name='note[content]'>Type the note here!</textarea><br />
     <input type='submit' name='note[title]' value='Submit!'/>
     <input type="hidden" name="_method" value="put"/>
+    <input type="submit" name="_method" value="delete"/>
   </form>
 </div>
