--- a/app/views/show_note.erb
+++ b/app/views/show_note.erb
@@ -1,1 +1,2 @@
-<p><%= "#{@note.id}. #{@note.content}"%></p>
+<p><%= "#{@note.id}. #{@note.content}"%></p><br />
+<a href='/notes/<%= @note.id %>/edit'>Edit!<a />
