--- a/app/views/update_note.erb
+++ b/app/views/update_note.erb
@@ -6,4 +6,7 @@
     <input type="hidden" name="_method" value="put"/>
     <input type="submit" name="_method" value="delete"/>
   </form>
+  <a class='home' href='/'>Home<a />
 </div>
+
+
