--- a/app/views/create_note.erb
+++ b/app/views/create_note.erb
@@ -4,5 +4,8 @@
     <textarea rows='10' cols='30' name='content'>Type the note here!</textarea><br>
     <input type='submit' value='Submit!'>
   </form>
+  <a class='home' href='/'>Home<a />
 </div>
+
+
 
